# job-market-intelligence

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/models/: job_matching.py
app/routes/: api.py  helpers.py  web.py
app/schemas/: job_matching.py  profile_generation.py
app/services/: company_signals.py  cv_generation.py  job_file_parser.py  job_matching.py  job_store.py  llm_generation.py  logging_config.py  market_report.py  profile_evidence.py  profile_generation.py  profile_matcher.py  profile_snapshot.py  profile_taxonomy.py  settings.py  technical_profile_generation.py
app/static/: styles.css
app/templates/: base.html  index.html
app/templates/pages/: cv.html  home.html  jobs.html  profile.html
app/templates/partials/: error.html  generated_cv.html  manual_match.html  profile_generation.html  (+2 more)
browser_extensions/linkedin_jobs_capture/: README.md  background.js  content.js  manifest.json  popup.html  popup.js
docs/: canonical_technical_profile.md  linkedin_jobs_browser_extension.md  technical-profile-evidence-skill.md
docs/plans/: 2026-07-07-generar-perfil-tecnico.md
examples/: sample_jobs.csv  sample_jobs.jsonl
items/profile/: repo_evidence.jsonl  skill_taxonomy.yaml  technical_experience.json  technical_experience.md
scripts/: generate_technical_experience.py
tests/: conftest.py  test_api_and_web.py  test_job_file_parser.py  test_job_store.py  test_market_report.py  test_profile_generation.py  test_profile_matcher.py  test_technical_profile_generator.py
tests/fixtures/: skill_taxonomy.yaml  technical_experience.json
